Saved current changes before pulling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <section class="card">
      <div class="container">
-        <img src="/photo.me.jpg">
+      <img src="photo.me.jpg">      
      </div>
      <div class="content">
         <article class="bio">
